--- a/index.qmd
+++ b/index.qmd
@@ -16,10 +16,10 @@ subtitle: "January 2025"
 | Monday, January 20  | 1:00 PM - 2:00 PM   | Hinds 347 | Optional: GitHub Setup Help                                                              | Collin Capano   |
 | Monday, January 20  | 2:00 PM - 4:00 PM   | Hinds 347 | [Computing Basics: git and GitHub](lessons/github/github-intro.qmd)                      |                 |
 | Thursday, January 23| 9:00 AM - 10:00 AM  | Hinds 336 | Optional: R Setup Help                                                                   |                 |
-| Thursday, January 23| 10:00 AM - 12:00 PM | Hinds 347 | [Intro to R: variables, assignments, types and functions](lessons/r-lessons/r-intro.qmd) | Sarah Lucas     |
-| Thursday, January 23| 2:00 PM - 4:00 PM   | Hinds 347 | [Intro to R: data vizualization with ggplot2](lessons/r-lessons/r-plotting.qmd)          | Jessie Trudeau  |
-| Friday, January 24  | 10:00 AM - 12:00 PM | Hinds 111 | [Intro to R: data cleaning with the tidyverse](lessons/r-lessons/r-tidydata.qmd)         |                 |
-| Friday, January 24  | 2:00 PM - 4:00 PM   | Hinds 111 | [Intro to R: data reports with R Markdown](lessons/r-lessons/r-markdown.qmd)             |                 |
+| Thursday, January 23| 10:00 AM - 12:00 PM | Hinds 347 | [Intro to R: variables, assignments, types and functions](lessons/r-lessons/r-intro.qmd) | Will Gearty     |
+| Thursday, January 23| 2:00 PM - 4:00 PM   | Hinds 347 | [Intro to R: data vizualization with ggplot2](lessons/r-lessons/r-plotting.qmd)          | Will Gearty     |
+| Friday, January 24  | 10:00 AM - 12:00 PM | Hinds 111 | [Intro to R: data cleaning with the tidyverse](lessons/r-lessons/r-tidydata.qmd)         | Sarah Lucas     |
+| Friday, January 24  | 2:00 PM - 4:00 PM   | Hinds 111 | [Intro to R: data reports with R Markdown](lessons/r-lessons/r-markdown.qmd)             | Jessie Trudeau  |
 
 # Workshop Preparation
 
